--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" src="style.css">
 </head>
 <body>
-    <p1>Test</p1>
+    <script src="index.js"></script>
+    <label id="label1">Check this button out!</label> <br>
+    <button type="button" id="button1">BUTTON</button>
 </body>
 </html>
