--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <script src="index.js"></script>
-    <label id="label1">Check this button out!</label> <br>
-    <button type="button" id="button1">BUTTON</button>
+    <label id="label1">Check this button out!</label><br>
+    <button type="button" id="button1">BUTTON</button><br>
+    <label id="label2">You pressed the button 0 times!</label>
 </body>
 </html>
