--- a/index.html
+++ b/index.html
@@ -6,16 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" src="style.css">
+    <style>
+        @import url('https://fonts.cdnfonts.com/css/minecraft-4');
+        * {font-family: 'Minecraft', sans-serif}
+        #Header1Text {text-align: center;}
+
+        #MainWebsiteHeader {text-align: center; font-family: 'Minecraft', sans-serif}
+        .SsomarPlugins_Container{
+            display: flex;
+            justify-content: center;
+        }
+        .SsomarPlugins_EI {
+            margin: 0 30px;
+            position: relative;
+        }
+            .SsomarPlugins_EI-HoverText {
+                display: none;
+                text-align: center;
+            }
+            .SsomarPlugins_EI:hover .SsomarPlugins_EI-HoverText {
+                display: block
+            }
+        .SsomarPlugins_EB {
+            margin: 0 30px;
+        }
+        .SsomarPlugins_EE {
+            margin: 0 30px;
+        }
+        
+    </style>
 </head>
 <body>
-    <label id="label1">Check this button out!</label><br>
-    <button type="button" id="button1">BUTTON</button><br>
-    <label id="label2">You pressed the button 0 times!</label>
-    <script src="index.js"></script>
-    <form>
-        <input placeholder="text" name="element" hidden> </input>
-        <input type="button" value="Click Me" onclick="add(document.forms[0].element.value)"/>
-        <span id="textId">&nbsp;</span>
-    </form>
+    <hr>
+    <h1 id="MainWebsiteHeader">Main Website</h1>
+    <h2 id="Header1Text">
+             This is my website for personal purposes.
+        <br> may range from portfolio reasons and 
+        <br> for centering all of my web development work in 
+        <br> one website
+    </h2>
+    <hr>
+    <h2 id="Header1Text">Web Editors for Ssomar's plugins</h2>
+    <div class="SsomarPlugins_Container">
+        <span class="SsomarPlugins_EI"><a href="\item config editors\executableitems_editor.html">ExecutableItems</a></span>
+            <span class="SsomarPlugins_EI-HoverText">waa</span>
+        <span class="SsomarPlugins_EB"></span><a href="\item config editors\executableitems_editor.html">ExecutableBlocks</a></span>
+        <span class="SsomarPlugins_EE"></span><a href="\item config editors\executableitems_editor.html">ExecutableEvents</a></span>
+    </div>
+
+
 </body>
 </html>
