--- a/item config editors/executableblocks_editor.html
+++ b/item config editors/executableblocks_editor.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     <h1 id="TopHeader">ExecutableBlocks Editor</h1><br>
-    <a href="../index.html" id="MinecraftFont">Go back</a>
+    <a href="../index.html" id="MinecraftFont">Go back</a><br>
 </body>
 </html>
