--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" src="style.css">
     <style>
-        @import url('https://fonts.cdnfonts.com/css/minecraft-4');
+        @import url('https://fontlibrary.org//face/minecraftia');
         * {
-            font-family: 'Minecraft', sans-serif;
-            color:darkorange;
+            font-family: 'MinecraftiaRegular';
+            font-weight: normal;
+            font-style: normal;
+            color: darkorange;
         }
         #Header1Text {text-align: center;}
 
