--- a/item config editors/executableblocks_editor.html
+++ b/item config editors/executableblocks_editor.html
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        @import url('https://fonts.cdnfonts.com/css/minecraft-4');
-        * {font-family: 'Minecraft', sans-serif}
+        @import url('https://fontlibrary.org//face/minecraftia');
+        * {
+            font-family: 'MinecraftiaRegular';
+            font-weight: normal;
+            font-style: normal;
+        }
         #TopHeader {text-align: center;}
     </style>
 </head>
 <body>
     <h1 id="TopHeader">ExecutableBlocks Editor</h1><br>
     <a href="../index.html" id="MinecraftFont">Go back</a><br>
+    
 </body>
 </html>
