--- a/item config editors/executableevents_editor.html
+++ b/item config editors/executableevents_editor.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        @import url('https://fonts.cdnfonts.com/css/minecraft-4');
-        * {font-family: 'Minecraft', sans-serif}
+        @import url('https://fontlibrary.org//face/minecraftia');
+        * {
+            font-family: 'MinecraftiaRegular';
+            font-weight: normal;
+            font-style: normal;
+        }
         #TopHeader {text-align: center;}
     </style>
 </head>
