--- a/item config editors/executableitems_editor.html
+++ b/item config editors/executableitems_editor.html
@@ -184,13 +184,16 @@
             <div style="text-align: left">
               Symbol Bin: ⨳ ⩩ ⌭<br>
               Command:<br>
-              <textarea style="width: 100%; border: solid 2px darkorange; resize: none"></textarea><br>
+              <textarea style="width: 100%; border: solid 2px darkorange; resize: none" id="CircleCommandBox"></textarea><br>
+              Output:<br>
+              <textarea style="width: 100%; border: solid 2px darkorange; resize: none" id="CircleOutputBox"></textarea><br>
+              <button id="CircleRefreshButton" onclick="refreshButton()">Refresh</button><br>
               <button id="CircleDownloadButton" onclick="downloadCirclePlot()">Download File</button>
             </div>
         </div>
     </div>
 
-    <script src="JS-executableitems_circleplot.js"></script>
+    <script src="JS-executableitems_circleplot.js"></script> 
 
 
 
