--- a/item config editors/executableitems_editor.html
+++ b/item config editors/executableitems_editor.html
@@ -183,7 +183,7 @@
             Rate:<input type="number" id="CircleRate"><br>
             Symbol X:<input type="text" id="CircleSymbolX" maxlength="1"><br>
             Symbol Y:<input type="text" id="CircleSymbolY" maxlength="1"><br>
-            Symbol Y Extra Value:<input type="number" id="CircleSymbolY-Add"><br>
+            Symbol Y Extra Value:<input type="number" id="CircleSymbolY-Add" value="0"><br>
             <div style="text-align: left">
               Symbol Bin: ⨳ ⩩ ⌭<br>
               Command:<br>
