--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
     <h2 id="Header1Text">Test Websites</h2>
     <div class="TextContainer">
         <span class="TextSpan">
-            <a href="\test sites\test.html">Testing Website</a>
+            <a href="\test sites\test.html">Testing Website</a><br>
+            <a href="\test sites\test2.html">Testing Website #2</a>
         </span>
     </div>
 
