--- a/item config editors/executableitems_editor.html
+++ b/item config editors/executableitems_editor.html
@@ -201,8 +201,17 @@
     <script src="JS-executableitems_circleplot.js"></script> 
 
 
+    <div class="frameBox">
+        <div style="color: darkorange; text-align: center">
+            RANDOM RUN creator
+        </div>
+        <div id="RandomRunFrame">
+            <button id="RandomRun-ADD-CMD-FIELD">Test</button>
+            <br>
+        </div>
+    </div>
 
-
+    <script src="JS-executableitems_randomRun-creator.js"></script> 
 
 
 
