--- a/test sites/test.html
+++ b/test sites/test.html
@@ -17,7 +17,17 @@
 		<option value="mercedes">Mercedes</option>
 		<option value="audi">Audi</option>
 	</select>
-    <script src="index.js"></script>
     <br><br>
+    <br>
+
+    <div id="EncaseField">
+      <button id="CreateField">Create Extra Field</button>
+    </div>
+
+
+
+
+    
+    <script src="index.js"></script>
 </body>
 </html>
