--- a/test sites/test2.html
+++ b/test sites/test2.html
@@ -6,5 +6,9 @@
   <body>
     <div id="div1">The text above has been created dynamically.</div>
     <script src="test2.js"></script>
+    <button>TEST1</button>
+    <script src="test2_001.js"></script>
+      <button>TEST2</button>
+    
   </body>
 </html>
