--- a/test sites/test2.html
+++ b/test sites/test2.html
@@ -4,11 +4,10 @@
     <title>Working with elements</title>
   </head>
   <body>
-    <div id="div1">The text above has been created dynamically.</div>
+    <div id="first">This is the FIRST div</div>
+    <div id="second">This is the SECOND div</div>
+    <div id="third">This is the THIRD div</div>
+    <button id="toggle">Hide THIRD div</button>
     <script src="test2.js"></script>
-    <button>TEST1</button>
-    <script src="test2_001.js"></script>
-      <button>TEST2</button>
-    
   </body>
 </html>
