--- a/index.html
+++ b/index.html
@@ -5,60 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" src="style.css">
-    <style>
-        @import url('https://fontlibrary.org//face/minecraftia');
-        * {
-            font-family: 'MinecraftiaRegular';
-            font-weight: normal;
-            font-style: normal;
-            color: darkorange;
-        }
-        #Header1Text {text-align: center;}
-
-        #MainWebsiteHeader {text-align: center; font-family: 'Minecraft', sans-serif}
-        .SsomarPlugins_Container{
-            display: flex;
-            justify-content: center;
-        }
-        #EI-TEXT {
-            color:red;
-        }
-        #EB-TEXT {
-            color:#35DE26;
-        }
-        #EE-TEXT {
-            color:#ED53E0;
-        }
-        .SsomarPlugins_EI {
-            margin: 0 30px;
-            position: relative;
-        }
-/*            .SsomarPlugins_EI-HoverText {
-                display: none;
-                text-align: center;
-            }
-            .SsomarPlugins_EI:hover .SsomarPlugins_EI-HoverText {
-                display: block
-            }
-            */
-        .SsomarPlugins_EB {
-            margin: 0 30px;
-        }
-        .SsomarPlugins_EE {
-            margin: 0 30px;
-        }
-
-        .TextContainer {
-            display: flex;
-            justify-content: center;
-        }
-        .TextSpan {
-            margin: 0 20px;
-        }
-
-        
-    </style>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body background="https://upload.wikimedia.org/wikipedia/commons/7/71/Black.png">
     <hr>
