--- a/item config editors/executableitems_editor.html
+++ b/item config editors/executableitems_editor.html
@@ -5,112 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        @import url('https://fontlibrary.org//face/minecraftia');
-        * {
-            font-family: 'MinecraftiaRegular';
-            font-weight: normal;
-            font-style: normal;
-        }
-
-        .frameBox {
-            border: 2px solid darkorange;
-            margin: 0.5%;
-            background-color: black;
-            width: 40%;
-            padding: 1%;
-        }
-        .forLoopBoxText {
-            color: darkorange;
-            text-align: center;
-        }
-        .forLoopBoxTextBody {
-            color: darkorange;      
-            text-align: right; 
-        }
-        .forLoopBoxTextBodyLower {
-            color: darkorange;      
-            text-align: left; 
-        }
-        .forLoopBoxTextBody_BoxLower {
-            border: 2px solid darkorange;
-            margin: 3px;
-            background-color: white;
-        }
-
-        .forLoop_textArea {
-            width: 100%;
-        }
-
-        /*=========================================================================*/
-        /*=========================================================================*/
-        /*=========================================================================*/
-        
-        .ForLoopStartValue {
-            position: relative;
-            display: inline-block;
-        }
-
-        .ForLoopStartValue_Text {
-            visibility: hidden;
-            position: absolute;
-            z-index: 1;
-            background-color: black;
-            border: 2px solid darkorange;
-            margin: 2%;
-            width: 120%;
-            text-align: left;
-            font-size: 100%;
-        }
-
-        .ForLoopStartValue:hover .ForLoopStartValue_Text {
-            visibility: visible;
-        }
-        /*---------------------------------------------------------------------------*/
-        .ForLoopIncrementValue {
-            position: relative;
-            display: inline-block;
-        }
-
-        .ForLoopIncrementValue_Text {
-            visibility: hidden;
-            position: absolute;
-            z-index: 1;
-            background-color: black;
-            border: 2px solid darkorange;
-            margin: 2%;
-            width: 120%;
-            text-align: left;
-            font-size: 100%;
-        }
-
-        .ForLoopIncrementValue:hover .ForLoopIncrementValue_Text {
-            visibility: visible;
-        }
-        /*---------------------------------------------------------------------------*/
-        .ForLoopIncrementAmount {
-            position: relative;
-            display: inline-block;
-        }
-
-        .ForLoopIncrementAmount_Text {
-            visibility: hidden;
-            position: absolute;
-            z-index: 1;
-            background-color: black;
-            border: 2px solid darkorange;
-            margin: 2%;
-            width: 120%;
-            text-align: left;
-            font-size: 100%;
-        }
-
-        .ForLoopIncrementAmount:hover .ForLoopIncrementAmount_Text {
-            visibility: visible;
-        }
-
-        #CircleRefreshButton, #TextBesidesCopyButton {display: inline-block;}
-    </style>
+    <link rel="stylesheet" href="CSS-executableitems_editor.css">
 </head>
 <body background="https://upload.wikimedia.org/wikipedia/commons/7/71/Black.png">
     <h1 style="text-align: center; color: darkorange;">ExecutableItems Editor</h1>
