--- a/test sites/test.html
+++ b/test sites/test.html
@@ -16,6 +16,7 @@
 		<option value="saab">Saab</option>
 		<option value="mercedes">Mercedes</option>
 		<option value="audi">Audi</option>
+        <option value="swag">Swag</option>
 	</select>
     <br><br>
     <br>
