For Loop Editor Update
Fixed decimal placings and limited the decimal placement up to 3 decimals

--- a/item config editors/executableblocks_editor.html
+++ b/item config editors/executableblocks_editor.html
@@ -5,19 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        @import url('https://fontlibrary.org//face/minecraftia');
-        * {
-            font-family: 'MinecraftiaRegular';
-            font-weight: normal;
-            font-style: normal;
-        }
-        #TopHeader {text-align: center;}
-    </style>
+    <link rel="stylesheet" href="CSS-executableblocks_editor.css">
 </head>
 <body>
     <h1 id="TopHeader">ExecutableBlocks Editor</h1><br>
     <a href="../index.html" id="MinecraftFont">Go back</a><br>
-    
+    <div style="text-align: center">
+        <button>AROUND BLOCK CONDITION</button>
+    </div>
 </body>
 </html>
