--- a/item config editors/executableitems_editor.html
+++ b/item config editors/executableitems_editor.html
@@ -40,9 +40,7 @@
               Increment Value: <input type="text" id="ForLoop_IncrementValue">
               <span class="ForLoopIncrementValue_Text">
                 This is where you will be inputting the<br>
-                increasing amount. If the Start Value or<br>
-                the Increment Value has one non-numerical<br>
-                character, the letters stack instead.<br>
+                increasing amount.<br>
               </span>
             </div><br>
             <div class="ForLoopIncrementAmount">
